@@ -6,6 +6,7 @@ import com.play.hiclear.common.exception.CustomException;
 import com.play.hiclear.common.exception.ErrorCode;
 import com.play.hiclear.common.message.SuccessMessage;
 import com.play.hiclear.common.service.GeoCodeService;
+import com.play.hiclear.common.utils.DistanceCalculator;
 import com.play.hiclear.domain.auth.entity.AuthUser;
 import com.play.hiclear.domain.meeting.dto.request.MeetingCreateRequest;
 import com.play.hiclear.domain.meeting.dto.request.MeetingEditRequest;
@@ -30,7 +31,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true) // 수정이 없는 데이터는 읽기만 함.
@@ -58,6 +58,7 @@ public class MeetingService {
         // 주소값 가져오기
         GeoCodeDocument address = geoCodeService.getGeoCode(request.getAddress());
 
+        // 거리
         Meeting meeting = new Meeting(request, user, address);
         meetingRepository.save(meeting);
 
@@ -172,28 +173,29 @@ public class MeetingService {
             responseList = participantList
                     .stream()
                     .map(p -> new MyMeetingResponse(p.getMeeting()))
-                    .collect(Collectors.toList());
+                    .toList();
             return new MyMeetingResponses(responseList);
         }
         // role = GUEST 인 경우
         responseList = participantList
                 .stream()
                 .map(p -> new MyMeetingResponse(p.getMeeting(), p.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
         return new MyMeetingResponses(responseList);
     }
 
     /**
      * 번개 통합검색 (급수필터, 정렬타입 적용)
      * @param sortType
-     * @param rank
+     * @param ranks
      * @param page
      * @param size
      * @return
      */
-    public Page<MeetingSearchResponse> search(SortType sortType, Ranks rank, int page, int size) {
+    public Page<MeetingSearchResponse> search(SortType sortType, Ranks ranks, int distance, int page, int size, AuthUser authUser) {
+        User user = userRepository.findByIdAndDeletedAtIsNullOrThrow(authUser.getUserId());
         Pageable pageable = PageRequest.of(page -1, size);
-        return meetingQueryDslRepository.search(sortType, rank, pageable);
+        return meetingQueryDslRepository.search(sortType, ranks, distance, user, pageable);
     }
 
     /**
